--- a/bookings/templates/menu.html
+++ b/bookings/templates/menu.html
@@ -33,6 +33,18 @@ Menu - Cucina Romana
                 Bistecca Fiorentina <span>€22.00</span>
                 </li>
             </ul>
+            <h3>Dolci</h3>
+            <ul class="list-group">
+                <li class="list-group-item d-flex justify-content-between align-items-center">
+            Tiramisu <span>€6.50</span>
+                </li>
+                <li class="list-group-item d-flex justify-content-between align-items-center">
+            Panna Cotta <span>€5.00</span>
+                </li>
+                <li class="list-group-item d-flex justify-content-between align-items-center">
+            Gelato <span>€4.50</span>
+                </li>
+            </ul>
         </div>
     </div>
 </div>
