--- a/bookings/templates/menu.html
+++ b/bookings/templates/menu.html
@@ -8,8 +8,10 @@ Menu - Cucina Romana
 <div class="container mt-5">
     <h2 class="text-center display-5 mb-4">Our Menu</h2>
     <div class="row">
-        <div class="col-md-4">
+        <!-- Antipasti -->
+        <div class="col-md-6">
             <h3>Antipasti</h3>
+            <img src="{% static 'img/bruschetta.jpg' %}" alt="Bruschetta" class="img-fluid rounded mb-3">
             <ul class="list-group">
                 <li class="list-group-item d-flex justify-content-between align-items-center">
                     Bruschetta <span>€6.00</span>
@@ -22,8 +24,30 @@ Menu - Cucina Romana
                 </li>
             </ul>
         </div>
-        <div class="col-md-4">
+        
+        <!-- Primi Piatti -->
+        <div class="col-md-6">
+            <h3>Primi Piatti</h3>
+            <img src="{% static 'img/carbonara.jpg' %}" alt="Spaghetti alla Carbonara" class="img-fluid rounded mb-3">
+            <ul class="list-group">
+                <li class="list-group-item d-flex justify-content-between align-items-center">
+                    Spaghetti alla Carbonara <span>€12.00</span>
+                </li>
+                <li class="list-group-item d-flex justify-content-between align-items-center">
+                    Lasagna al Forno <span>€14.00</span>
+                </li>
+                <li class="list-group-item d-flex justify-content-between align-items-center">
+                    Risotto ai Funghi <span>€13.50</span>
+                </li>
+            </ul>
+        </div>
+    </div>
+
+    <!-- Secondi Piatti -->
+    <div class="row mt-4">
+        <div class="col-md-6">
             <h3>Secondi Piatti</h3>
+            <img src="{% static 'img/saltimbocca.jpg' %}" alt="Saltimbocca alla Romana" class="img-fluid rounded mb-3">
             <ul class="list-group">
                 <li class="list-group-item d-flex justify-content-between align-items-center">
                     Saltimbocca alla Romana <span>€16.50</span>
@@ -36,8 +60,11 @@ Menu - Cucina Romana
                 </li>
             </ul>
         </div>
-        <div class="col-md-4">
+        
+        <!-- Dolci -->
+        <div class="col-md-6">
             <h3>Dolci</h3>
+            <img src="{% static 'img/tiramisu.jpg' %}" alt="Tiramisu" class="img-fluid rounded mb-3">
             <ul class="list-group">
                 <li class="list-group-item d-flex justify-content-between align-items-center">
                     Tiramisu <span>€6.50</span>
