--- a/bookings/templates/menu.html
+++ b/bookings/templates/menu.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load static %}
 
 {% block title %}
 Menu - Cucina Romana
@@ -12,7 +13,7 @@ Menu - Cucina Romana
         <div class="col-md-6">
             <h3>Antipasti</h3>
             <img src="{% static 'img/bruschetta.jpg' %}" alt="Bruschetta" class="img-fluid rounded mb-3">
-            <ul class="list-group">
+            <ul class="list-group mb-4">
                 <li class="list-group-item d-flex justify-content-between align-items-center">
                     Bruschetta <span>€6.00</span>
                 </li>
@@ -29,7 +30,7 @@ Menu - Cucina Romana
         <div class="col-md-6">
             <h3>Primi Piatti</h3>
             <img src="{% static 'img/carbonara.jpg' %}" alt="Spaghetti alla Carbonara" class="img-fluid rounded mb-3">
-            <ul class="list-group">
+            <ul class="list-group mb-4">
                 <li class="list-group-item d-flex justify-content-between align-items-center">
                     Spaghetti alla Carbonara <span>€12.00</span>
                 </li>
@@ -43,12 +44,12 @@ Menu - Cucina Romana
         </div>
     </div>
 
-    <!-- Secondi Piatti -->
     <div class="row mt-4">
+        <!-- Secondi Piatti -->
         <div class="col-md-6">
             <h3>Secondi Piatti</h3>
             <img src="{% static 'img/saltimbocca.jpg' %}" alt="Saltimbocca alla Romana" class="img-fluid rounded mb-3">
-            <ul class="list-group">
+            <ul class="list-group mb-4">
                 <li class="list-group-item d-flex justify-content-between align-items-center">
                     Saltimbocca alla Romana <span>€16.50</span>
                 </li>
@@ -65,7 +66,7 @@ Menu - Cucina Romana
         <div class="col-md-6">
             <h3>Dolci</h3>
             <img src="{% static 'img/tiramisu.jpg' %}" alt="Tiramisu" class="img-fluid rounded mb-3">
-            <ul class="list-group">
+            <ul class="list-group mb-4">
                 <li class="list-group-item d-flex justify-content-between align-items-center">
                     Tiramisu <span>€6.50</span>
                 </li>
@@ -80,3 +81,4 @@ Menu - Cucina Romana
     </div>
 </div>
 {% endblock %}
+
